Puts articles in a container, uncomments link to inputs page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <div class="demo">Access me by class (2)</div>
 
     <h2>Tag (article)</h2>
-    <article>Access me by tag (1)</article>
-    <article>Access me by tag (2)</article>
+    <div id="articleContainer">
+      <article>Access me by tag (1)</article>
+      <article>Access me by tag (2)</article>
+    </div>
 
     <h2>Query Selector</h2>
     <div id="demo-query">Access me by query</div>
@@ -64,6 +66,6 @@
         </li>
       </ul>
     </div>
-    <!-- <a href="/inputs.html"> GO TO INPUTS</a> -->
+    <a href="/inputs.html"> GO TO INPUTS</a>
   </body>
 </html>
