--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         margin: 5px;
         border: 1px solid #dedede;
       }
+      .newClass {
+        font-size: 30px;
+      }
+      .genericClass {
+        background-color: blue;
+      }
     </style>
   </head>
 
@@ -29,9 +35,12 @@
     <h1>Accessing Elements in the DOM</h1>
 
     <h2>ID (#demo)</h2>
-    <div id="demo">
-      <p>Access me by ID</p>
+    <div id="demoContainer">
+      <div id="demo">
+        <p>Access me by ID</p>
+      </div>
     </div>
+    <input type="button" onclick="replicate()" value="REPLICATE" />
 
     <h2>Class (.demo)</h2>
     <div class="demo">
@@ -44,6 +53,7 @@
       <article>Access me by tag (1)</article>
       <article>Access me by tag (2)</article>
     </div>
+    <input type="button" onclick="createArticle()" value="CREATE" />
 
     <h2>Query Selector</h2>
     <div id="demo-query">Access me by query</div>
@@ -73,6 +83,26 @@
         console.log(demoParagraph)
         demoParagraph.innerText = 'the text has changed!'
         document.querySelector('#demo p').innerText = 'changed again!!'
+        demoParagraph.style.color = 'red'
+        demoParagraph.classList.add('newClass')
+        demoParagraph.classList.remove('newClass')
+      }
+      function replicate() {
+        let demo = document.querySelector('#demo')
+        let demo2 = demo.cloneNode(true)
+        let demoContainer = document.querySelector('#demoContainer')
+        demoContainer.appendChild(demo2)
+      }
+      function createArticle() {
+        let random = Math.random() * 11
+        random = Math.floor(random)
+        let myNewArticle = document.createElement('article')
+        myNewArticle.innerText = "I've been created from scratch! " + random
+        myNewArticle.style.color = 'red'
+        myNewArticle.classList.add('genericClass')
+        // element is completed but I need to attach it somewhere
+        let parent = document.querySelector('#articleContainer')
+        parent.appendChild(myNewArticle)
       }
     </script>
   </body>
