Adds event handlers

--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         myNewArticle.innerText = "I've been created from scratch! " + random
         myNewArticle.style.color = 'red'
         myNewArticle.classList.add('genericClass')
+        myNewArticle.onclick = function (e) {
+          console.log('you clicked me!!')
+          console.log('EVENT INFO', e)
+        }
         // element is completed but I need to attach it somewhere
         let parent = document.querySelector('#articleContainer')
         parent.appendChild(myNewArticle)
