--- a/inputs.html
+++ b/inputs.html
@@ -26,7 +26,7 @@
 
   <body>
     <div>
-      <input id="name" type="text" />
+      <input id="name" type="text" onkeydown="keyPressed(event)" />
     </div>
     <div>
       <input id="email" type="email" />
@@ -38,14 +38,23 @@
       function getUserData() {
         let name = document.querySelector('#name').value
         let email = document.querySelector('#email').value
-        console.log('name is', name)
-        console.log('email is', email)
-        // alert(name + ' ' + email)
-        let userDiv = document.createElement('div')
-        userDiv.innerText = 'you inputted ' + name + ' and ' + email
-        document.querySelector('body').appendChild(userDiv)
-        document.querySelector('#name').value = ''
-        document.querySelector('#email').value = ''
+        if (name && email.includes('@')) {
+          console.log('name is', name)
+          console.log('email is', email)
+          // alert(name + ' ' + email)
+          let userDiv = document.createElement('div')
+          userDiv.innerText = 'you inputted ' + name + ' and ' + email
+          document.querySelector('body').appendChild(userDiv)
+          document.querySelector('#name').value = ''
+          document.querySelector('#email').value = ''
+        }
+      }
+      function keyPressed(e) {
+        console.log('a key has been pressed!')
+        console.log(e)
+        if (e.key === '#') {
+          alert('the # char is not allowed!')
+        }
       }
     </script>
   </body>
